fixed spacing issue with mq

--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ table {
 }
 html {
   font-size: 62.5%;
-  height: 101%;
+  height: 100%;
 }
 html,
 body {
@@ -139,7 +139,7 @@ body {
 }
 body {
   background-color: #363A67;
-  background: url('../images/art-bright-celebration.jpg');
+  background: url(../images/art-bright-celebration.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   overflow-x: hidden;
@@ -289,13 +289,14 @@ footer {
   width: 100%;
   height: 6rem;
   background-color: #000;
+  padding-top: 2rem;
 }
 footer p {
   color: #fff;
   font-size: 1rem;
 }
 main {
-  width: 100%;
+  width: 107%;
   margin: 0 auto;
   transition: all 0.4s;
   margin-bottom: auto;
