--- a/less/footer.less
+++ b/less/footer.less
@@ -3,6 +3,7 @@ footer {
   width: 100%;
   height: 6rem;
   background-color: #000;
+  padding-top: 2rem;
 
   p {
     color: #fff;
